welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:5: error: not found: type boolean
def arriver() : boolean = {
                ^SnakeBuggle:15: error: value droite is not a member of Unit
      droite();avance()droite();
                       ^SnakeBuggle:18: error: value gauche is not a member of Unit
      gauche();avance()gauche();
                       ^